# uavros2

./: .gitattributes  .gitignore  .gitmodules  README.md  install.sh  install_debug.sh  package.xml  setup.cfg  setup.py
arms/: manifest.yaml
arms/mounts/: x500_openmanip_x.urdf.xacro  x500_panda.urdf.xacro  x500_three_dof.urdf.xacro  x500_ur5.urdf.xacro
arms/openmanip_x/: asset.yaml
arms/panda/: asset.yaml
arms/three_dof/: asset.yaml
arms/ur5/: asset.yaml
assets/airfoils/: clark_y.yaml  naca0012.yaml
assets/arms/: openmanip_x.yaml  panda.yaml  three_dof.yaml  ur5.yaml
assets/chassis/: fixed_wing_basic.yaml  standard_vtol.yaml  x3_uav.yaml  x500.yaml
assets/sensors/: barometer_default.yaml  gimbal_small_3d.yaml  gps_default.yaml  imu_default.yaml  lidar_2d.yaml  lidar_3d.yaml  mono_camera.yaml  realsense_d435.yaml  stereo_camera.yaml  velodyne_16.yaml
assets/uavs/: fixed_wing_basic.yaml  fixed_wing_basic_with_cam.yaml  standard_vtol.yaml  standard_vtol_with_cam.yaml  x3_uav.yaml  (+8 more)
docs/: ARCHITECTURE.md  ASSETS.md  FLYING.md  INSTALL.md  MANIPULATORS.md  MODELS.md  SIMULATORS.md  WORLDS.md
launch/: arm_control.launch.py  gz_sim.launch.py  sim.launch.py  sim_common.launch.py  visualization.launch.py
rviz/: drone_view.rviz  rviz_config.rviz
scripts/: bash.sh
test/: test_asset_builder.py  test_asset_registry.py  test_asset_spec.py  test_canonical_topics.py  test_runtime_sensor_manager.py  test_sim_control_bridge.py  test_xacro_parse.py
uav_gz_sim/: adaptive_image_stitcher.py  sim_control_bridge.py
uavros2/: asset_cli.py  control_math.py  drone_markers.py  execute_random_trajectories_node.py  gt_trajectory_publisher.py  runtime_sensor_manager.py  sensor_relay.py  tf_relay.py  world_meta.py  world_surface_publisher.py
worlds/: HEIGHTMAP_PARAMETERS.md  manifest.yaml  urban1.sdf  urban2.sdf  urban3.sdf  urban4.sdf  urban5.sdf  warehouse.sdf
(+123 files in other folders)
